<resources>
    <string name="app_name">Travelloo</string>
    <string name="underlined_text"><u>Forgot password</u></string>
    <string name="calender">Calender</string>
    <string name="booking">Booking</string>
    <string name="home">Home</string>
    <string name="curency">Curency</string>
    <string name="emergency">Emergency</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="api_key">AIzaSyBa9k77lsF38OhYZ2s4TG6mL04iCJJnaQE</string>


</resources>
